2010-12-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.pl: Use 'blocksize' to compute the available space.

2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Don't fail on trailing NUL bytes.

2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Fix possible hang if
	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
	* perl/Amanda/Changer.pm: Return the error.

2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check if taper is flushing something before
	  moving a dle to directq.

2010-12-07 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: remove manual library requires and
	   set curl vs libcurl based on distro.

2010-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: make relative url in index.html.

2010-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Add amanda version in html headers and footers.

2010-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xslt/html.xsl.in: Include Amanda version in HTML headers and
				footers.

2010-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (quote_string_maybe): Don't use match.
	* common-src/util.c (len_quote_string_maybe): New function.
	* common-src/util.h (len_quote_string): Define.
	* server-src/amadmin.c: Don't call find_dump twice.
	* server-src/find.c (search_logfile): Don't use regex.
	* server-src/find.c (print_find_result): Use len_quote_string.

2010-11-16 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: add rhel6 stanza to distro detection

2010-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-snapshot.pl: set $self->{mesgout}.

2010-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Close listening socket before accepted socket.

2010-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Typo.
