@@ -674,8 +674,9 @@ sub get_parts_and_dumps {
 	    ($level, $str) = Amanda::Util::skip_quoted_string($str);
 	    if ($status ne 'FAIL') {
 		my $s = $str;
-		($secs, $kb, $str) = ($str =~ /^\[sec ([0-9.]+) kb (\d+) .*\] ?(.*)$/)
+		($secs, $kb, $str) = ($str =~ /^\[sec ([-0-9.]+) kb (\d+) .*\] ?(.*)$/)
 		    or die("'$s'");
+		$secs = 0.1 if ($secs <= 0);
 	    }
 	    if ($status ne 'OK') {
 		$message = $str;
