@@ -486,7 +486,7 @@ sub make_stats {
     my $self = shift;
     my ($size, $duration, $orig_kb) = @_;
 
-    $duration = 0.1 if $duration == 0;  # prevent division by zero
+    $duration = 0.1 if $duration <= 0;  # prevent division by zero
     my $kb = $size/1024;
     my $kps = "$kb.0"/$duration; # Perlish cast from BigInt to float
 
